Archive2/ae/9be5f799926130/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -Wextra -pthread main.cpp
main.cpp:22:25: error: invalid operands to binary expression ('const char *' and 'int')
  Hash table = {"test1" >> 1};
                ~~~~~~~ ^  ~
1 error generated.
